@@ -1,3 +1,6 @@
+2009-07-19
+- fixed systray crash by mart1987
+
 2009-07-14
 - play with some tint2conf code
 
